# Revo-Retargeting

./: .gitattributes  .gitignore  .gitmodules  README.md  README_CN.md  VERSION  requirements.txt
docs/: topics.md
scripts/: calibrate_manus.sh  check_system_deps.sh  install_manus_sdk.sh  install_revo3_deps.sh  package_manus_sdk.sh  start_driver.sh  start_revo3_driver.sh  teleop.sh  teleop_revo3.sh
src/: README.md
src/brainco_capabilities/manus_revo2_retarget/: README.md  README_HEX.md  package.xml  setup.cfg  setup.py
src/brainco_capabilities/manus_revo2_retarget/config/: retarget.yaml  teleop_controller.yaml
src/brainco_capabilities/manus_revo2_retarget/launch/: hex_real_hand_pipeline_launch.py  pipeline_launch.py  real_hand_pipeline_launch.py
src/brainco_capabilities/manus_revo2_retarget/manus_revo2_retarget/: mujoco_joint_state_viewer.py  mujoco_manus_overlay_viewer.py  retarget_node.py  revo2_joints.py  revo2_retarget.py  sim_manus_glove_publisher.py  teleop_controller_node.py
src/brainco_capabilities/manus_revo2_retarget/manus_revo2_retarget/brainco_hand/: brainco.yml  brainco_left.urdf  brainco_right.urdf
src/brainco_capabilities/manus_revo2_retarget/manus_revo2_retarget/retargeters/: __init__.py  dex_retargeter.py  joint_thumb_retargeter.py  revo3_thumb_retargeter.py
src/brainco_capabilities/manus_revo2_retarget/test/: test_revo3_thumb.py
src/brainco_capabilities/manus_revo2_retarget/tools/: analyze_revo2_jitter_bag.py  revo2_retarget_plot.py
src/brainco_capabilities/manus_ros2/: CMakeLists.txt  package.xml
src/brainco_capabilities/manus_ros2/src/: CalibrationFiles.cpp  ManusDataPublisher.cpp  ManusDataPublisher.hpp  manus_calibration_tool.cpp
src/brainco_description/revo2_description/: CMakeLists.txt
src/brainco_description/revo2_description/launch/: view_revo2_left_hand.launch.py  view_revo2_right_hand.launch.py
src/brainco_description/revo2_description/rviz/: SINGLE.rviz  revo2_left_hand.rviz  revo2_right_hand.rviz
src/brainco_description/revo2_description/urdf/: revo2.single.system.xacro  revo2_hand.xacro  revo2_left_hand.urdf.xacro  revo2_right_hand.urdf.xacro
src/brainco_drivers/hex_glove_driver/: README.md  package.xml  setup.cfg  setup.py
src/brainco_drivers/hex_glove_driver/hex_glove_driver/: hex_glove_udp_node.py
src/brainco_drivers/revo2_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  README_CN.md  package.xml  revo2_driver_plugins.xml  revo2_pid_controller.xml
src/brainco_drivers/revo2_driver/config/: protocol_canfd_left.yaml  protocol_canfd_right.yaml  protocol_modbus_left.yaml  protocol_modbus_right.yaml  revo2.ros2_control.xacro  revo2_controllers.yaml
src/brainco_drivers/revo2_driver/doc/: revo2_bimanual_modbus_serial_setup.md
src/brainco_drivers/revo2_driver/include/revo2_driver/: brainco_hand_api.hpp  brainco_hand_hardware.hpp  canfd_session.hpp  command_converter.hpp  logger_macros.hpp  modbus_session.hpp  revo2_pid_controller.hpp  sdk_helpers.hpp  transport_session_base.hpp
src/brainco_drivers/revo2_driver/launch/: dual_revo2_system.launch.py  revo2_system.launch.py
src/brainco_drivers/revo2_driver/scripts/: download_sdk.sh
src/brainco_drivers/revo2_driver/setup/: README.md  bootstrap_revo2.sh  check_revo2_setup.sh  detect_revo2_ports.py  detect_revo2_ports_auto.sh  discover_revo2_serial.sh  role_mapping_utils.sh  setup_changelog.md  setup_revo2_udev_rules.sh  usage_guide.md
src/brainco_drivers/revo2_driver/src/: brainco_hand_api.cpp  brainco_hand_hardware.cpp  canfd_session.cpp  modbus_session.cpp  revo2_pid_controller.cpp  sdk_helpers.cpp  transport_session_base.cpp
src/manus_revo3_retarget/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/manus_revo3_retarget/config/: control.yaml  four_finger_retarget.yaml  retarget_tuning_left_DV1.yaml  retarget_tuning_left_DV2.yaml  retarget_tuning_right_DV1.yaml  spread_retarget.yaml  thumb_retarget.yaml
src/manus_revo3_retarget/include/manus_revo3_retarget/: four_finger_retarget.hpp  retarget_common.hpp  spread_retarget.hpp  thumb_retarget.hpp
src/manus_revo3_retarget/include/manus_revo3_retarget_cpp/: four_finger_retarget.hpp  retarget_common.hpp  spread_retarget.hpp  thumb_retarget.hpp
src/manus_revo3_retarget/launch/: command_state_viewer.launch.py  pipeline_launch.py
src/manus_revo3_retarget/manus_revo3_retarget/: command_state_viewer.py  joint_state_aligner.py  manus_glove_io.py  manus_record.py  manus_replay.py  mit_linear_interpolator.py  quintic_joint_test.py  retarget_tuning_panel.py  thumb_cmp_debug.py
src/manus_revo3_retarget/scripts/: run_pipeline_record_mcap.sh  run_quintic_test_record_mcap.sh
src/manus_revo3_retarget/src/: four_finger_retarget.cpp  retarget_node_cpp.cpp  spread_retarget.cpp  thumb_retarget.cpp
src/manus_revo3_retarget/test/: test_mit_linear_interpolator.py
src/manus_ros2/: CMakeLists.txt  README.md  package.xml
src/manus_ros2/ManusSDK/include/: ManusSDK.h  ManusSDKTypeInitializers.h  ManusSDKTypes.h
src/manus_ros2/calibrations/: .gitignore
src/manus_ros2/src/: CalibrationFiles.cpp  CalibrationFiles.hpp  ClientLogging.hpp  ManusDataPublisher.cpp  ManusDataPublisher.hpp
src/manus_ros2_msgs/: CMakeLists.txt  package.xml
src/manus_ros2_msgs/msg/: ManusVibrationCommand.msg
