<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manus_ros2</name>
  <version>0.0.1</version>
  <description>Publishes MANUS glove data as ROS 2 messages when the official MANUS SDK is installed.</description>
  <maintainer email="noreply@example.com">MANUS</maintainer>
  <license>Apache-2.0 AND LicenseRef-Manus-SDK</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>manus_ros2_msgs</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
